WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300622
Speculation Rules: invalid rules should fire an error event
https://bugs.webkit.org/show_bug.cgi?id=300622
Summary
Speculation Rules: invalid rules should fire an error event
Yoav Weiss
Reported
2025-10-13 03:44:26 PDT
The inline-speculation-rules-errors.html test has failing expectations. We should fix that.
Attachments
Add attachment
proposed patch, testcase, etc.
Yoav Weiss
Comment 1
2025-10-13 03:54:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52234
Radar WebKit Bug Importer
Comment 2
2025-10-20 03:45:12 PDT
<
rdar://problem/163017959
>
EWS
Comment 3
2025-11-05 21:53:59 PST
Committed
302629@main
(11f4ab9a5edd): <
https://commits.webkit.org/302629@main
> Reviewed commits have been landed. Closing PR #52234 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug